Link to the builder added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <section id="main_content" class="inner">
         <p>Citizen Assemble is a Team Builder tool for the Pulp City Miniatures Game.
 It's an HTML/Javascript only project, intended to be used online/offline, with no data stored.</p>
+        <p>Do you want to <a href="builder/builder.html">test it</a> ? (still alpha version)</p>
       </section>
     </div>
 
