Alpha 0.0.2 added to the pages

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	    <h3>Alpha 0.0.2</h3>
         <p>Citizen Assemble is a Team Builder tool for the Pulp City Miniatures Game.
 It's an HTML/Javascript only project, intended to be used online/offline, with no data stored.</p>
         <p>Do you want to <a href="builder/builder.html">test it</a> ? (still alpha version)</p>
