--- a/builder/builder.html
+++ b/builder/builder.html
@@ -243,6 +243,8 @@ function fill_supremes()
         {
           var renderedHtml = Mustache.render(mustacheTemplate, view);
           $("#list-modal-supremes").html(renderedHtml);
+          fill_freelancer();
+          setPopupsElements();
           // Events on Buttons
           $(".btn-select-supreme-modal").click(function() { select_supreme(getSupremeId("btn-select-supreme-modal-", $(this).attr('id'))); });
           $(".btn-unselect-supreme-modal").click(function() { unselect_supreme(getSupremeId("btn-unselect-supreme-modal-", $(this).attr('id')), true); });
@@ -755,6 +757,38 @@ function check_honorary_member()
     $('#togHonoraryMember').bootstrapToggle('disable');
   else 
     $('#togHonoraryMember').bootstrapToggle('enable');  
+}
+
+/************************************/
+/*** Elements and info in Pop-Ups ***/
+/************************************/
+function setPopupsElements()
+{
+    var popupOptions = { trigger: "hover", placement: "top", html: true };
+    // Element air    
+    popupOptions['title'] = "Air element";
+    popupOptions['content'] = "Strong/<b>Water</b> & Strong/<b>Flight</b><br /><i>Earth is Strong/Air</i>";
+    $('.icon-element-air').popover(popupOptions);
+    // Element water
+    popupOptions['title'] = "Water element";
+    popupOptions['content'] = "Strong/<b>Fire</b> & Strong/<b>Mechanical</b><br /><i>Air is Strong/Water</i>";
+    $('.icon-element-water').popover(popupOptions);
+    // Element fire
+    popupOptions['title'] = "Fire element";
+    popupOptions['content'] = "Strong/<b>Earth</b> & Strong/<b>Non-living</b><br /><i>Water is Strong/Fire</i>";
+    $('.icon-element-fire').popover(popupOptions);
+    // Element earth
+    popupOptions['title'] = "Earth element";
+    popupOptions['content'] = "Strong/<b>Air</b> & Strong/<b>Objects and Structures</b><br /><i>Fire is Strong/Earth</i>";
+    $('.icon-element-earth').popover(popupOptions);
+    // Element light
+    popupOptions['title'] = "Light element";
+    popupOptions['content'] = "Strong/<b>Darkness</b> & Strong/<b>Outsider</b><br /><i>Darkness is Strong/Light</i>";
+    $('.icon-element-light').popover(popupOptions);
+    // Element darkness
+    popupOptions['title'] = "Darkness element";
+    popupOptions['content'] = "Strong/<b>Light</b> & Strong/<b>Living</b><br /><i>Light is Strong/Darkness</i>";
+    $('.icon-element-darkness').popover(popupOptions);
 }
 
 /**************/
