Fixes #3 - Thumbnails attached to a Supreme, or default if no image found. Added Thumbnail for C.O.R.E. Added "picture_id" field to the Supremes JSON : link to another Supremes, from which to use the Thumbnail

--- a/builder/builder.html
+++ b/builder/builder.html
@@ -1017,6 +1017,12 @@ function pad (str, max) {
   return str.length < max ? pad("0" + str, max) : str;
 }
 
+function imgError(image) {
+    image.onerror = "";
+    image.src = "img/default_thumbnail.jpg";
+    return true;
+}
+
 /********************/
 /*** Page loading ***/
 /********************/
